# python-gpt-po

./: .dockerignore  .flake8  .gitignore  .pylintrc  CLAUDE.md  Dockerfile  LICENSE  MANIFEST.in  README.md  build.sh  docker-entrypoint.sh  main.py  po_translator.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  version.sh
.devcontainer/: devcontainer.json
.github/workflows/: ci-cd.yml  docker-build-test-push.yml  pylint.yml  python-ci-package.yml  python-publish.yml  test-sample.po
docs/: development.md  usage.md
man/: gpt-po-translator.1
python_gpt_po/: .env  __init__.py  main.py  po_translator.py  version.py
python_gpt_po/models/: config.py  enums.py  provider_clients.py
python_gpt_po/services/: language_detector.py  model_manager.py  po_file_handler.py  translation_service.py
python_gpt_po/services/providers/: __init__.py  anthropic_provider.py  azure_openai_provider.py  base.py  claude_sdk_provider.py  custom_provider.py  deepseek_provider.py  ollama_provider.py  openai_compatible_provider.py  openai_provider.py  provider_init.py  registry.py
python_gpt_po/tests/: test_ai_generated_tagging.py  test_config_integration.py  test_config_loader.py  test_default_context.py  test_django_compatibility.py  test_django_special_codes.py  test_duplicate_msgid.py  test_english_fallback.py  test_gitignore_functionality.py  test_incremental_save.py  test_language_detector.py  test_locale_handling.py  test_msgctxt_support.py  test_multi_provider.py  test_plural_handling.py  test_plural_translation.py  test_po_translator.py  test_skip_translated_files.py  test_translation_detection.py  test_whitespace_preservation.py
python_gpt_po/tests/integration/: test_real_po_files.py
python_gpt_po/tests/providers/: test_anthropic_provider.py  test_azure_openai_provider.py  test_custom_provider.py  test_deepseek_provider.py  test_ollama_provider.py  test_openai_provider.py
python_gpt_po/tests/unit/: test_cost_estimator.py  test_translation_service_fuzzy.py
python_gpt_po/utils/: cli.py  config_loader.py  cost_estimator.py  gitignore.py  helpers.py  plural_form_helpers.py  po_entry_helpers.py
