[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Use find with namespaces=True to handle nested packages 
packages = { find = { exclude = ["*.__pycache__", "*.__pycache__.*"], namespaces = true } }

[tool.setuptools_scm]
fallback_version = "1.0.0"
write_to = "python_gpt_po/_version.py"

[project]
name = "gpt-po-translator"
dynamic = ["version"]
authors = [
    {name = "Bram Mittendorff", email = "bram@pescheck.io"},
]
description = "A CLI tool for translating .po files using GPT models."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "polib==1.2.0",
    "openai==1.58.1",
    "python-dotenv==1.0.0",
    "pytest==8.2.2",
    "tenacity==9.0.0",
    "setuptools-scm==8.1.0",
    "pycountry==24.6.1",
    "anthropic==0.48.0",
    "requests==2.32.3",
    "responses==0.25.6",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Localization",
    "Topic :: Text Processing :: Linguistic",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Natural Language :: English",
    "Natural Language :: Dutch",
    "Environment :: Console",
    "Typing :: Typed"
]

[project.scripts]
gpt-po-translator = "python_gpt_po.main:main"

[tool.flake8]
max-line-length = 120

[tool.isort]
line_length = 120
